WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269786
[WGSL] Type checker does not visit structure attributes
https://bugs.webkit.org/show_bug.cgi?id=269786
Summary
[WGSL] Type checker does not visit structure attributes
Tadeu Zagallo
Reported
2024-02-20 06:03:53 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-02-20 06:03:59 PST
<
rdar://problem/123238802
>
Tadeu Zagallo
Comment 2
2024-02-20 06:05:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24811
EWS
Comment 3
2024-02-21 08:52:05 PST
Committed
275105@main
(cc2256fa58d7): <
https://commits.webkit.org/275105@main
> Reviewed commits have been landed. Closing PR #24811 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug