[WGSL] Type checker does not visit structure attributes https://bugs.webkit.org/show_bug.cgi?id=269786 rdar://123238802

Reviewed by Mike Wyrzykowski.

The attributes of a struct weren't being visited, and therefore not type checked.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):

Canonical link: https://commits.webkit.org/275105@main