Source/WebGPU/WGSL/TypeCheck.cpp
@@ -433,6 +433,8 @@ std::optional<FailedCheck> TypeChecker::check()
 // Declarations
 void TypeChecker::visit(AST::Structure& structure)
 {
+    visitAttributes(structure.attributes());
+
     HashMap<String, const Type*> fields;
     for (unsigned i = 0; i < structure.members().size(); ++i) {
         auto& member = structure.members()[i];
